web/themes/custom/union_marketing/scss/layout/_default.scss
body {
  margin: 0 auto;
  overflow-x: hidden; // Use of the full-width() mixin causes a tiny horizontal scrollbar.
}

.layout-container {
  width: 100%;
  max-width: 1360px;
  margin: 0 auto;
  display: grid;
  grid-row-gap: 1em;
  grid-column-gap: 0;
  grid-template-rows: [header] auto [body] auto [content-bottom] auto [footer] auto;
  grid-template-columns: [left-gutter] 1fr [content] 22fr [right-gutter] 1fr;

  @include breakpoint(md) {
    justify-items: stretch;
    grid-template-columns: [left-gutter] 1fr [content] 44fr [right-gutter] 1fr;
  }

  @include breakpoint(xl) {
    grid-template-columns: [content] auto;
  }

  &--sidebar-right {
    @include breakpoint(md) {
      grid-column-gap: 2rem;
      grid-template-columns: [left-gutter] 2fr [content] 9fr [sidebar] 3fr [right-gutter] 2fr;
      justify-items: stretch;
    }
  }
}

.layout__region--first,
.layout__region--second {
  display: grid;
  grid-gap: var(--cu-vr2) var(--cu-grid-column-gap);

  .cu-section--gapless & {
    grid-gap: 0;
  }
}


header {
  grid-row: header;
  grid-column: content;

  // Position the logo at the start
  > :first-child {
    margin-right: auto;
  }
}

header.cu-header {
  justify-content: flex-end;
}

main {
  grid-row: body;
  grid-column: content;
}

aside.layout-sidebar-first {
  grid-row: content-bottom;
  grid-column: content;

  @include breakpoint(md) {
    grid-row: body;
    grid-column: sidebar;
  }
}

footer {
  grid-row: footer;
  grid-column: content;
}

hr.pad {
  border: none;
  margin: 2em 0 0;
}

.layout-banner {
  margin-bottom: var(--cu-component-margin-bottom, var(--cu-vr1));

  // Remove the bottom margin on course nodes.
  .node--course & {
    margin-bottom: 0;
  }
}

.article--post .cu-section > div,
.article--post .field--field-components > .field__item,
.collection .field--field-components > .field__item {
  margin: var(--cu-component-margin-bottom, var(--cu-vr2)) 0;

  @include breakpoint(md) {
    margin: 0 0 var(--cu-component-margin-bottom, var(--cu-vr3));
  }
}

